compiler/fir/analysis-tests/testData/resolve/scripts/scriptShouldBeInvisibleFromOtherSources.kts

// FILE: script.kts

val a = 42

// FILE: main.kt

val b =  <!UNRESOLVED_REFERENCE!>a<!>
